# udpgrm

./: .clang-format  .gitignore  Makefile  README.md
crates/udpgrm/: Cargo.toml  README.md
crates/udpgrm/examples/: client.rs  simple-flip.rs  tqclient.rs  tqserver.rs  udpserver-flow.rs
crates/udpgrm/src/: lib.rs  types.rs
ebpf/: ebpf.c  ebpf_aes128.c  ebpf_bespoke.c  ebpf_inter.c  ebpf_internal.h  ebpf_quic.c  ebpf_sha256.c  siphash.h
examples/: cbpf-basic.sh  cbpf-naive-quic.sh  echoserver.py  http3_simple_client.py  http3_simple_server.py  requirements.txt
include/: udpgrm.h  udpgrm_internal.h
src/: cgroup.c  common.h  do_flows.c  do_list.c  list.h  metrics.c  net.c  pidfd.c  tubular.c  udpgrm.c  usage.txt  uspace.c  utils.c
tests/: __init__.py  base.py  lsocket.py  runner.py  test_activate.py  test_basic.py  test_cfcid.py  test_dissector_bespoke.py  test_dissector_cbpf.py  test_dissector_flow.py  test_dissector_noop.py  test_dissector_quic.py  test_tubular.py  utils.py
tools/: mmdecoy.c  tubular_mock.py  udpgrm_activate.py  verifier_log_to_cov_2.sh
