[package]
name = "udpgrm"
description = "Socket API bindings for udpgrm"
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/cloudflare/udpgrm-os"
publish = false

[features]
default = []
tokio = ["dep:tokio"]
socket2 = ["dep:socket2"]
all = ["tokio", "socket2"]

[dependencies]
libc = "0.2"
static_assertions = "1.1"
socket2 = { version = "0.5", optional = true }
tokio = { version = "1", optional = true, features = ["net"] }

[dev-dependencies]
nix = { version = "0.28", default-features = false, features = ["socket", "uio", "poll", "net"] }
futures = "0.3"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
quiche = "0.24"
ring = "0.17"
mio = { version = "0.8", features = ["net", "os-poll"] }
clap = { version = "4", features = ["derive"] }
url = "2"
signal-hook = "0.3"
tokio-quiche = "0.6"
boring = "4"
udpgrm = { path = ".", features = ["socket2"] }
